--- a/cart-me/src/app/components/category/categories/categories.component.html
+++ b/cart-me/src/app/components/category/categories/categories.component.html
@@ -9,9 +9,11 @@
         <a class="btn btn-primary" style="width: 300px;" [routerLink]="[ '/uploadcategory']">Create New</a>
     </p>
 </div>
+<hr/>
+<br/>
 <!-- <hr> -->
 
-<div class="text-center container">
+<!-- <div class="text-center container">
     <table class="table table-borderless table-striped">
         <thead>
             <tr>
@@ -32,4 +34,61 @@
             </tr>
         </tbody>
     </table>
+</div> -->
+
+
+
+
+
+<div class="container shadow p-3">
+<!-- <mat-form-field appearance="standard">
+    <mat-label>Search</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+</mat-form-field> -->
+
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="slug">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Slug </th>
+            <td mat-cell *matCellDef="let row"> {{row.slug}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="sorting">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header > Sorting </th>
+            <td mat-cell *matCellDef="let row"> {{row.sorting}} </td>
+        </ng-container>
+
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <td mat-cell *matCellDef="let row"> 
+                <a class="btn btn-primary btn-sm" [routerLink]="['/editcategory']"><strong>EDIT</strong></a> 
+                <a class="btn btn-danger btn-sm" [routerLink]="['/deletecategory']"><strong>DELETE</strong></a>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <!-- <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr> -->
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of Categories"></mat-paginator>
 </div>
+</div>
+
