--- a/cart-me/src/app/components/contact/contact.component.html
+++ b/cart-me/src/app/components/contact/contact.component.html
@@ -29,9 +29,9 @@
                                     <div class="validate "></div>
                                 </div>
                                 <div class="mb-3">
-                                    <div class="loading">Loading</div>
-                                    <div class="error-message "></div>
-                                    <div class="sent-message ">Your message has been sent. Thank you!</div>
+                                    <!-- <div class="loading">Loading</div> -->
+                                    <!-- <div class="error-message "></div> -->
+                                    <div class="sent-message text-success">Your message has been sent. Thank you!</div>
                                 </div>
                                 <div class="text-center"><button type="submit" class="button btn btn-dark">Send Message</button></div>
                             </form>
