--- a/cart-me/src/app/components/product/product-list/product-list.component.css
+++ b/cart-me/src/app/components/product/product-list/product-list.component.css
@@ -17,3 +17,12 @@ th {
   height: auto;
   /* background-color: rgb(211, 211, 211); */
 }
+/* ########################################################### */
+.example-card {
+  max-width: 400px;
+}
+
+.example-header-image {
+  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+  background-size: cover;
+}
