--- a/cart-me/src/app/components/product/product-list/product-list.component.html
+++ b/cart-me/src/app/components/product/product-list/product-list.component.html
@@ -37,6 +37,75 @@
 
 </div>
 
+<!-- ########################################################### -->
+
+<div class="container shadow p-3 d-flex ">
+    <mat-card class="example-card m-1">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Chicken</mat-card-title>
+            <mat-card-subtitle>African Meals</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="assets/images/Devillechicken.jpg" alt="" height="200" class="">
+        <mat-card-content>
+            <p>
+                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+                bred for hunting.
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button class="btn btn-info mx-1">LIKE</button>
+            <button mat-button class="btn btn-warning">SHARE</button>
+        </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card m-1">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Meat Ball Salad</mat-card-title>
+            <mat-card-subtitle>African Meals</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="assets/images/kij.jpg" alt="" height="200" class="">
+        <mat-card-content>
+            <p>
+                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+                bred for hunting.
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button class="btn btn-info mx-1">LIKE</button>
+            <button mat-button class="btn btn-warning">SHARE</button>
+        </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card m-1">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Jollof Rice</mat-card-title>
+            <mat-card-subtitle>African Meals</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="assets/images/Goatmeat.webp" alt="" height="200" class="">
+        <mat-card-content>
+            <p>
+                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+                bred for hunting.
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button class="btn btn-info mx-1">LIKE</button>
+            <button mat-button class="btn btn-warning">SHARE</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
+
+<br/>
+<br />
+<br />
+
+<!-- ########################################################### -->
+
+
 <div class="container shadow p-3">
  <!-- <mat-form-field appearance="standard">
     <mat-label>Search</mat-label>
@@ -98,4 +167,11 @@
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of Products"></mat-paginator>
  </div>
 </div>
+<br/>
+<br/>
+<br/>
+<br/>
+<br />
+<br />
 <!-- ###################################################### -->
+<app-footer></app-footer>
