--- a/cart-me/src/app/components/category/categories/categories.component.html
+++ b/cart-me/src/app/components/category/categories/categories.component.html
@@ -91,4 +91,11 @@
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of Categories"></mat-paginator>
 </div>
 </div>
-
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<!-- ###################################################### -->
+<app-footer></app-footer>
