--- a/cart-me/src/app/components/category/categories/categories.component.html
+++ b/cart-me/src/app/components/category/categories/categories.component.html
@@ -23,7 +23,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let cat in GetAllCategories2() | async">
+            <tr *ngFor="let cat in catList">
                 <td>
                    {{cat.name}}
                 </td>
