--- a/cart-me/src/app/components/product/product-list/product-list.component.html
+++ b/cart-me/src/app/components/product/product-list/product-list.component.html
@@ -56,7 +56,7 @@
         </mat-card-content>
         <mat-card-actions>
             <button mat-button class="btn btn-info mx-1">LIKE</button>
-            <button mat-button class="btn btn-warning">SHARE</button>
+            <button mat-button class="btn btn-warning">CART</button>
         </mat-card-actions>
     </mat-card>
     <mat-card class="example-card m-1">
@@ -75,7 +75,7 @@
         </mat-card-content>
         <mat-card-actions>
             <button mat-button class="btn btn-info mx-1">LIKE</button>
-            <button mat-button class="btn btn-warning">SHARE</button>
+            <button mat-button class="btn btn-warning">CART</button>
         </mat-card-actions>
     </mat-card>
     <mat-card class="example-card m-1">
@@ -94,7 +94,7 @@
         </mat-card-content>
         <mat-card-actions>
             <button mat-button class="btn btn-info mx-1">LIKE</button>
-            <button mat-button class="btn btn-warning">SHARE</button>
+            <button mat-button class="btn btn-warning">CART</button>
         </mat-card-actions>
     </mat-card>
 </div>
