--- a/cart-me/src/app/components/category/edit-category/edit-category.component.html
+++ b/cart-me/src/app/components/category/edit-category/edit-category.component.html
@@ -4,7 +4,7 @@
     <h2><strong>EDIT CATEGORY</strong></h2>
 </div>
 <hr />
-<div class="text-center">
+<div class="container text-center">
     <div class="row">
         <div class="col-12">
             <div class="text-center">
