--- a/cart-me/src/app/components/product/product-list/product-list.component.html
+++ b/cart-me/src/app/components/product/product-list/product-list.component.html
@@ -7,18 +7,18 @@
 </div>
 
  <br>
- <!-- <div>
+ <div>
   <div class="text-center">
    <h1><strong>PRODUCTS</strong></h1>
    <hr class="btn-primary" style="width: 300px;" />
    <div class="row">
-    <div class="bd-example bd-example-images m-1 ">
-     <div class="text-center ">
-      <img src="assets/images/12531.webp " class="artwork mb-2" height="120 " width="120">
-      <h6>CHINESE MEALS BALLS</h6>
+    <div class="bd-example bd-example-images m-1" *ngFor="let prod of prodList">
+     <div class="text-center">
+      <img src="assets/images/Goatmeat.webp" class="artwork mb-2" height="120 " width="120">
+      <h6 class="text-dark">{{prod.MealName}}</h6>
       <span class="navbar-expand-sm  d-flex mx-auto my-auto justify-content-center">
        <div>
-        <h5 class="btn btn-outline-danger small btn-sm mr-2">$20</h5>
+        <h5 class="btn btn-outline-danger small btn-sm mr-2">{{prod.Price | currency}}</h5>
        </div>
        <div>
         <button class="btn btn-danger small btn-sm border-0 pt-2" id="addtocarttext">
@@ -30,12 +30,15 @@
     </div>
    </div>
   </div>
- </div> -->
+ </div>
 </div>
 
 <div class="container">
 
 </div>
+<br/>
+<br/>
+<br />
 
 <!-- ########################################################### -->
 
