--- a/cart-me/src/app/components/category/edit-category/edit-category.component.html
+++ b/cart-me/src/app/components/category/edit-category/edit-category.component.html
@@ -6,7 +6,7 @@
 <hr />
 <div class="container text-center">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 col-md-6 mx-auto">
             <div class="text-center">
                 <form asp-action="Create" [formGroup]="CategoryForm" (ngSubmit)="editCategory()">
                 
