--- a/cart-me/src/app/components/product/products-edit/products-edit.component.html
+++ b/cart-me/src/app/components/product/products-edit/products-edit.component.html
@@ -5,29 +5,30 @@
 <hr />
 <div class="text-center card box-shadow container ">
     <div class="row col-12 m-2">
-        <div class="col-md-6">
-            <form asp-action="Edit" method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                <input type="hidden" asp-for="Id" />
-                <input type="hidden" asp-for="Image" />
-
+        <div class="col-md-6" *ngIf="dataLoaded">
+            <form  enctype="multipart/form-data" method="post" [formGroup]="productEditForm" (submit)="onSubmit()">
 
                 <div class="form-group">
-                    <label asp-for="ChefName" class="control-label"></label>
-                    <input asp-for="ChefName" class="form-control" />
-                    <span asp-validation-for="ChefName" class="text-danger"></span>
+                    <label class="control-label"></label>
+                    <input formControlName="ChefName" class="form-control" />
+                    <div class="text-danger">
+                        {{showChefNameErrors()}}
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label asp-for="MealName" class="control-label"></label>
-                    <input asp-for="MealName" class="form-control" />
-                    <span asp-validation-for="MealName" class="text-danger"></span>
+                    <label  class="control-label"></label>
+                    <input formControlName="MealName" class="form-control" />
+                    <div class="text-danger">
+                        {{showMealNameErrors()}}
+                    </div>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Description" class="control-label"></label>
-                    <textarea asp-for="Description" class="form-control" rows="3"></textarea>
-                    <span asp-validation-for="Description" class="text-danger"></span>
+                    <textarea formControlName="Description" class="form-control" rows="3"></textarea>
+                    <div class="text-danger">
+                        {{showDescriptionErrors()}}
+                    </div>
                 </div>
                 <div class="form-group">
                     <label asp-for="Image" class="control-label">CURRENT IMAGE</label>
@@ -37,29 +38,35 @@
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="Image" class="control-label">NEW PRODUCT IMAGE</label>
+                    <label  class="control-label">NEW PRODUCT IMAGE</label>
                     <div class="custom-file">
-                        <input asp-for="ImageUpload" class="form-control custom-file-input" id="customfile" />
+                        <input asp-for="ImageUpload" formControlName="Image" class="form-control custom-file-input" id="customfile" />
                         <label class="custom-file-label" for="customfile">Choose File</label>
                     </div>
-                    <span asp-validation-for="ImageUpload" class="text-danger"></span>
+                    <div class="text-danger">
+                        {{showImageErrors()}}
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Price" class="control-label"></label>
-                    <input asp-for="Price" class="form-control" />
-                    <span asp-validation-for="Price" class="text-danger"></span>
+                    <label  class="control-label"></label>
+                    <input formControlName="Price" class="form-control" />
+                    <div class="text-danger">
+                        {{showPriceErrors()}}
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label asp-for="CategoryId" class="control-label"></label>
-                    <select asp-for="CategoryId" asp-items="@ViewBag.CategoryId" class="form-control">
+                    <label  class="control-label"></label>
+                    <select formControlName="FoodCategory" class="form-control">
                         <option value="0">Choose a Category...</option>
                     </select>
-                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                    <div class="text-danger">
+                        {{showFoodCategoryErrors()}}
+                    </div>
                 </div>
                 <br />
                 <hr class="w-100 btn-dark" />
                 <div class="form-group">
-                    <button type="submit" value="SAVE" class="btn btn-primary" style="width: 300px;">SUBMIT</button>
+                    <button type="submit" value="SAVE" class="btn btn-primary" style="width: 300px;" [disabled]="!productEditForm.valid">SUBMIT</button>
                 </div>
                 <hr class="w-100 btn-dark" />
 
