--- a/cart-me/src/app/components/product/products-edit/products-edit.component.html
+++ b/cart-me/src/app/components/product/products-edit/products-edit.component.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-    <h4><strong>EDIT PRODUCTS</strong></h4>
+    <h4><strong>EDIT PRODUCT</strong></h4>
     <hr class="btn-dark" style="width: 300px;" />
 </div>
 <hr />
