--- a/cart-me/src/app/components/product/productsupload/productsupload.component.html
+++ b/cart-me/src/app/components/product/productsupload/productsupload.component.html
@@ -9,44 +9,54 @@
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <form  enctype="multipart/form-data" method="post" [formGroup]="productForm" (submit)="onSubmit()">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
 
                         <div class="form-group">
-                            <label asp-for="ChefName" class="control-label">Chef Name</label>
-                            <input asp-for="ChefName" class="form-control" />
-                            <span asp-validation-for="ChefName" class="text-danger"></span>
+                            <label class="control-label"></label>
+                            <input formControlName="ChefName" class="form-control" />
+                            <div class="text-danger">
+                                {{showChefNameErrors()}}
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label asp-for="MealName" class="control-label"> Meal Name</label>
-                            <input asp-for="MealName" class="form-control" />
-                            <span asp-validation-for="MealName" class="text-danger"></span>
-                        </div>
+                       <div class="form-group">
+                           <label class="control-label"></label>
+                           <input formControlName="MealName" class="form-control" />
+                           <div class="text-danger">
+                               {{showMealNameErrors()}}
+                           </div>
+                       </div>
 
-                        <div class="form-group">
-                            <label asp-for="Description" class="control-label">Description</label>
-                            <textarea asp-for="Description" class="form-control" rows="3" placeholder="Write a brief Comment about your Product..."></textarea>
-                            <span asp-validation-for="Description" class="text-danger"></span>
-                        </div>
+                       <div class="form-group">
+                           <label asp-for="Description" class="control-label"></label>
+                           <textarea formControlName="Description" class="form-control" rows="3"></textarea>
+                           <div class="text-danger">
+                               {{showDescriptionErrors()}}
+                           </div>
+                       </div>
                         <div class="form-group">
                             <label asp-for="Image" class="control-label">Image File</label>
-                            <div class="custom-file">
-                                <input asp-for="ImageUpload" class="form-control custom-file-input" id="customfile" type="file" />
-                                <label class="custom-file-label" for="customfile">Choose File</label>
+                                <div class="custom-file">
+                                    <input type="file" formControlName="Image" class="form-control custom-file-input" id="customfile" />
+                                    <label class="custom-file-label" for="customfile">Choose File</label>
+                                </div>
+                                <div class="text-danger">
+                                    {{showImageErrors()}}
+                                </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label"></label>
+                            <input formControlName="Price" class="form-control" />
+                            <div class="text-danger">
+                                {{showPriceErrors()}}
                             </div>
-                            <span asp-validation-for="ImageUpload" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Price" class="control-label">Price</label>
-                            <input asp-for="Price" class="form-control" />
-                            <span asp-validation-for="Price" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="CategoryId" class="control-label">Category</label>
-                            <select asp-for="CategoryId" asp-items="@ViewBag.CategoryId" class="form-control">
-                                <option class="form-control"  value="0">Choose a Category...</option>
+                            <label class="control-label"></label>
+                            <select formControlName="FoodCategory" class="form-control">
+                                <option value="0">Choose a Category...</option>
                             </select>
-                            <span asp-validation-for="CategoryId" class="text-danger"></span>
+                            <div class="text-danger">
+                                {{showFoodCategoryErrors()}}
+                            </div>
                         </div>
                         <div class="form-group">
                             <button type="submit" value="Create" class="btn btn-primary" style="width: 300px;">SUBMIT</button>
