--- a/cart-me/src/app/components/header/header.component.css
+++ b/cart-me/src/app/components/header/header.component.css
@@ -44,5 +44,8 @@ a.navbar-brand {
   text-align: center;
   justify-content: center;
 }
+#logout {
+  cursor: pointer;
+}
 
 /* ############################################################### */
