--- a/cart-me/src/app/components/header/header.component.html
+++ b/cart-me/src/app/components/header/header.component.html
@@ -17,10 +17,10 @@
                     <li class="nav-item li">
                         <a class="nav-link text-dark" [routerLinkActiveOptions]="{exact:true}" [routerLink]=" [ '/home'] " routerLinkActive="router-link-active "><strong>HOME</strong></a>
                     </li>
-                    <li class="nav-item li">
+                    <li class="nav-item li" *ngIf="!checkLoggedIn()">
                         <a class="nav-link  text-dark " [routerLink]="[ '/register']" routerLinkActive="router-link-active"><strong>REGISTER</strong></a>
                     </li>
-                    <li class="nav-item li">
+                    <li class="nav-item li" *ngIf="!checkLoggedIn()">
                         <a class="nav-link  text-dark " [routerLink]="[ '/login']" routerLinkActive="router-link-active "><strong>LOGIN</strong></a>
                     </li>
 
@@ -40,11 +40,11 @@
                         <a class="nav-link text-dark " [routerLink]="[ '/contact'] " routerLinkActive="router-link-active "><strong>CONTACT</strong></a>
                     </li>
                     <li class="nav-item li">
-                        <a class="nav-link  text-dark " [routerLink]="[ '/admin'] " routerLinkActive="router-link-active "><strong>ADMIN</strong></a>
+                        <a class="nav-link  text-dark " [routerLink]="[ '/admin']" routerLinkActive="router-link-active"><strong>ADMIN</strong></a>
                     </li>
-                    <!-- <li class="nav-item li">
-                        <a class="nav-link text-dark btn btn-default" (submit)="Logout"><strong>LOGOUT</strong></a>
-                    </li> -->
+                    <li class="nav-item li" *ngIf="checkLoggedIn()">
+                        <a class="nav-link text-dark" id="logout" (click)="Logout()"><strong>LOGOUT</strong></a>
+                    </li>
 
                 </ul>
             </div>
