--- a/cart-me/src/app/components/account/sign-up/sign-up.component.html
+++ b/cart-me/src/app/components/account/sign-up/sign-up.component.html
@@ -112,7 +112,7 @@
      </div>
 
      <div class="form-group">
-      <button type="submit" value="Create" class="btn btn-primary text-white"
+      <button type="submit" [disabled]="!registerationForm.valid" class="btn btn-primary text-white"
         (click)="OnSubmit()"><strong>SUBMIT</strong>
       </button>
      </div>
