--- a/cart-me/src/app/components/product/productsupload/productsupload.component.html
+++ b/cart-me/src/app/components/product/productsupload/productsupload.component.html
@@ -11,14 +11,14 @@
                     <form  enctype="multipart/form-data" method="post" [formGroup]="productForm" (submit)="onSubmit()">
 
                         <div class="form-group">
-                            <label class="control-label"></label>
+                            <label class="control-label">Chef Name</label>
                             <input formControlName="ChefName" class="form-control" />
                             <div class="text-danger">
                                 {{showChefNameErrors()}}
                             </div>
                         </div>
                        <div class="form-group">
-                           <label class="control-label"></label>
+                           <label class="control-label"> Meal Name</label>
                            <input formControlName="MealName" class="form-control" />
                            <div class="text-danger">
                                {{showMealNameErrors()}}
@@ -26,7 +26,7 @@
                        </div>
 
                        <div class="form-group">
-                           <label asp-for="Description" class="control-label"></label>
+                           <label asp-for="Description" class="control-label"> Description</label>
                            <textarea formControlName="Description" class="form-control" rows="3"></textarea>
                            <div class="text-danger">
                                {{showDescriptionErrors()}}
@@ -43,14 +43,14 @@
                                 </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label"></label>
+                            <label class="control-label">Price</label>
                             <input formControlName="Price" class="form-control" />
                             <div class="text-danger">
                                 {{showPriceErrors()}}
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label"></label>
+                            <label class="control-label">Food Category</label>
                             <select formControlName="FoodCategory" class="form-control">
                                 <option value="0">Choose a Category...</option>
                             </select>
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" value="Create" class="btn btn-primary" style="width: 300px;">SUBMIT</button>
+                            <button type="submit" [disabled]="!productForm.valid" class="btn btn-primary" style="width: 300px;">SUBMIT</button>
                         </div>
                     </form>
                 </div>
