--- a/cart-me/src/app/components/category/category-delete/category-delete.component.html
+++ b/cart-me/src/app/components/category/category-delete/category-delete.component.html
@@ -2,26 +2,24 @@
 <br />
 <div class="text-center">
  <h4><strong>DELETE CATEGORY</strong></h4>
- <div>
+ <div class="text-danger">
   <h4>Are you sure you want to delete this Category?</h4>
  </div>
 </div>
 <hr />
 <div class="container text-center">
  <hr />
- <dl class="row">
+ <dl class="row" *ngIf="dataLoaded">
   <dt class="col-sm-6">
    CATEGORY
   </dt>
   <dd class="col-sm-6">
-   CATEGORY
+   {{categoryDetails.name}}
   </dd>
  </dl>
  <hr class="btn-primary" />
- <form asp-action="Delete">
-  <input type="hidden" asp-for="Id" />
-  <input type="submit" value="Delete" class="btn btn-danger" /> |
-  <a asp-action="Index"><strong>BACK</strong></a>
- </form>
+ <div>
+  <button type="submit" value="Delete" class="btn btn-danger" (click)="DeleteCategory()">DELETE</button> 
+ </div>
 </div>
 
