--- a/cart-me/src/app/components/product/products-delete/products-delete.component.html
+++ b/cart-me/src/app/components/product/products-delete/products-delete.component.html
@@ -1,69 +1,65 @@
 <br />
 <div class="text-center">
     <h4><strong>DELETE PRODUCT</strong></h4>
-    <div>
+    <div class="text-danger">
         <h4>Are you sure you want to delete this Product?</h4>
     </div>
 </div>
 <hr />
-<div class="container text-center">
+<div class="container text-center" *ngIf="dataLoaded">
     <hr />
     <dl class="row">
+ 
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            Chef Name
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            {{productDetails.chefName}}
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ChefName)
+            Meal Name
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ChefName)
+            {{productDetails.mealName}}
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MealName)
+            Slug
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MealName)
+            {{productDetails.slug}}
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Slug)
+            Description
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Slug)
+            {{productDetails.description}}
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            Image
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            {{productDetails.image}}
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
+            Price
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+            {{productDetails.price}}
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            Category
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CategoryId)
+            {{productDetails.categoryId}}
         </dd>
     </dl>
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <button type="submit" value="Delete" class="btn btn-danger"><strong>DELETE</strong></button> |
-        <a asp-action="Index"><strong>BACK TO LIST</strong></a>
-    </form>
+    <div asp-action="Delete">
+        <button type="submit" (click)="deleteProduct()" class="btn btn-danger"><strong>DELETE</strong></button> |
+    </div>
 </div>
 
+<div class="container text-center" *ngIf="!dataLoaded">
+     <h2>NO CONTENT</h2>
+</div>
 <router-outlet></router-outlet>
